--- a/PR118-SearchView/app/src/main/res/menu/menu_activity_main.xml
+++ b/PR118-SearchView/app/src/main/res/menu/menu_activity_main.xml
@@ -7,7 +7,8 @@
         android:title="@string/buscar"
         android:orderInCategory="100"
         android:icon="@drawable/ic_search"
-        app:showAsAction="ifRoom" />
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
     <item
         android:id="@+id/mnuLimpiar"
         android:title="@string/limpiar_historial_busqueda"
