--- a/PR011-ListViewSimple/app/src/main/res/layout/activity_main.xml
+++ b/PR011-ListViewSimple/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,11 @@
                 android:paddingBottom="@dimen/panel_margin"
                 android:paddingTop="@dimen/panel_margin">
 
-    <TextView
-        android:id="@+id/lblListado"
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="@dimen/panel_margin"
-        android:text="@string/listado_de_alumnos"
-        tools:context=".MainActivity"/>
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/divider"
-        android:layout_below="@+id/lblListado">
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/divider">
 
         <ListView
             android:id="@+id/lstAlumnos"
