--- a/PR106-RecyclerView/app/src/main/res/layout/activity_main.xml
+++ b/PR106-RecyclerView/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
             android:layout_marginBottom="@dimen/fab_margin"
             android:layout_marginRight="@dimen/fab_margin"
             android:layout_marginEnd="@dimen/fab_margin"
+            android:elevation="@dimen/fab_elevation"
             android:src="@drawable/ic_action_add"/>
 
     </android.support.design.widget.CoordinatorLayout>
