--- a/PR092-SwipeRefreshLayout/app/src/main/res/layout/fragment_main.xml
+++ b/PR092-SwipeRefreshLayout/app/src/main/res/layout/fragment_main.xml
@@ -1,13 +1,16 @@
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swlPanel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.iessaladillo.pedrojoya.pr092.MainFragment" >
+    tools:context="es.iessaladillo.pedrojoya.pr092.MainFragment">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/lstLista"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
