--- a/PR027-SQLiteDAO/app/src/main/res/layout/fragment_alumno.xml
+++ b/PR027-SQLiteDAO/app/src/main/res/layout/fragment_alumno.xml
@@ -1,86 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.NestedScrollView
+    android:id="@+id/nsvScrollView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/fragment_alumno_padding">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/fragment_alumno_padding">
+            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/lblNombre"
+            <ImageView
+                android:id="@+id/imgNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/nombre" />
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/fragment_alumno_padding"
+                android:layout_marginEnd="@dimen/fragment_alumno_padding"
+                android:contentDescription="@string/nombre"
+                android:src="@drawable/ic_face"/>
 
-            <EditText
-                android:id="@+id/txtNombre"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilNombre"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
-                android:inputType="textPersonName" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/lblCurso"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/curso" />
+                <EditText
+                    android:id="@+id/txtNombre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/nombre"
+                    android:inputType="textPersonName"
+                    android:imeOptions="actionNext"/>
 
-            <Spinner
-                android:id="@+id/spnCurso"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom" />
-
-            <TextView
-                android:id="@+id/lblTelefono"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/telefono" />
-
-            <EditText
-                android:id="@+id/txtTelefono"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
-                android:inputType="phone" />
-
-            <TextView
-                android:id="@+id/lblDireccion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/direccion" />
-
-            <EditText
-                android:id="@+id/txtDireccion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
-                android:inputType="textPostalAddress" />
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
-    </ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
+            android:orientation="horizontal">
 
-    <com.software.shell.fab.ActionButton
-        android:id="@+id/btnGuardar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/fab_margin"
-        fab:button_color="@color/accent"
-        fab:button_colorPressed="@color/accent_light"
-        fab:image="@drawable/fab_save_icon"
-        fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down" />
+            <ImageView
+                android:id="@+id/imgCurso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/curso"
+                android:layout_marginRight="@dimen/fragment_alumno_padding"
+                android:layout_marginEnd="@dimen/fragment_alumno_padding"
+                android:src="@drawable/ic_create"/>
 
-</FrameLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilCurso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <es.iessaladillo.pedrojoya.pr027.utils.ClickToSelectEditText
+                    android:id="@+id/txtCurso"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_arrow_drop_down"
+                    android:drawableRight="@drawable/ic_arrow_drop_down"
+                    android:hint="@string/curso"
+                    android:inputType="none"
+                    android:imeOptions="actionNext"/>
+
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgTelefono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/telefono"
+                android:layout_marginRight="@dimen/fragment_alumno_padding"
+                android:layout_marginEnd="@dimen/fragment_alumno_padding"
+                android:src="@drawable/ic_phone"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilTelefono"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/txtTelefono"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/telefono"
+                    android:inputType="phone"
+                    android:imeOptions="actionNext"/>
+
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgDireccion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/direccion"
+                android:layout_marginRight="@dimen/fragment_alumno_padding"
+                android:layout_marginEnd="@dimen/fragment_alumno_padding"
+                android:src="@drawable/ic_home"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilDireccion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/txtDireccion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/direccion"
+                    android:inputType="textPostalAddress"
+                    android:imeOptions="actionDone"/>
+
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+</android.support.v4.widget.NestedScrollView>
