--- a/PR027-SQLiteDAO/app/src/main/res/layout/fragment_lista_alumnos.xml
+++ b/PR027-SQLiteDAO/app/src/main/res/layout/fragment_lista_alumnos.xml
@@ -1,51 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <ListView
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/lstAlumnos"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:divider="@drawable/item_divider"
-        android:dividerHeight="1dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp" />
-    <RelativeLayout
-        android:id="@+id/rlListaVacia"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:clickable="true"
-        android:gravity="center_horizontal|center_vertical" >
-        <ImageView
-            android:id="@+id/imgNuevoAlumno"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:contentDescription="@string/sin_alumnado_agregue_un_alumno"
-            android:src="@drawable/ic_user_add" />
-        <TextView
-            android:id="@+id/lblNuevoAlumno"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imgNuevoAlumno"
-            android:layout_centerHorizontal="true"
-            android:text="@string/sin_alumnado_agregue_un_alumno"
-            android:gravity="center" />
-    </RelativeLayout>
-    <com.software.shell.fab.ActionButton
-        android:id="@+id/btnAgregar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <TextView
+        android:id="@+id/lblNuevoAlumno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/fab_margin"
-        fab:button_color="@color/accent"
-        fab:button_colorPressed="@color/accent_light"
-        fab:image="@drawable/fab_plus_icon"
-        fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down" />
+        android:layout_gravity="center"
+        android:drawableTop="@drawable/ic_user_add"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:drawablePadding="16dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:text="@string/sin_alumnado_agregue_un_alumno"/>
 
 </FrameLayout>
+
