--- a/PR168-Firebase/app/src/main/res/values/dimens.xml
+++ b/PR168-Firebase/app/src/main/res/values/dimens.xml
@@ -13,4 +13,7 @@
     <dimen name="three_lines_avatar_marginLeft">16dp</dimen>
     <dimen name="three_lines_avatar_marginTop">20dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
