--- a/PR151-DataBinding/app/src/main/res/layout/activity_main.xml
+++ b/PR151-DataBinding/app/src/main/res/layout/activity_main.xml
@@ -2,36 +2,47 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="es.iessaladillo.pedrojoya.pr151.Saludo" />
+        <import type="es.iessaladillo.pedrojoya.pr151.ActivityMainVM" />
         <variable
-            name="saludo"
-            type="Saludo" />
+            name="viewModel"
+            type="ActivityMainVM" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgImagen"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/imageHeight"
+            app:imageUrl="@{@string/lorempixel}"
+            app:placeholder="@{@drawable/placeholder}"
+            app:error="@{@drawable/placeholder}"
+            android:scaleType="centerCrop"/>
 
         <TextView
             android:id="@+id/lblNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@{saludo.educado?@color/accent:@color/primary}"
-            android:text="@string/introduzca_nombre"/>
+            app:font='@{"postcard.ttf"}'
+            android:textColor="@{viewModel.educado?@color/primary:@color/accent}"
+            android:text="@string/introduzca_nombre"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
         <EditText
             android:id="@+id/txtNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@{saludo.nombre}"
+            android:text="@{viewModel.nombre}"
             android:inputType="text|textPersonName"
-            android:addTextChangedListener="@{saludo.nombrewatcher}">
+            android:addTextChangedListener="@{viewModel.txtNombreTextWatcher}"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin">
 
             <requestFocus/>
         </EditText>
@@ -40,18 +51,23 @@
             android:id="@+id/chkEducado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            app:checked="@{saludo.educado}"
+            app:checked="@{viewModel.educado}"
             android:text="@string/saludar_educadamente"
-            android:onCheckedChanged="@{saludo.educadocheckedchangedlistener}"/>
+            app:font='@{"postcard.ttf"}'
+            android:onCheckedChanged="@{viewModel.chkEducadoCheckedChangedListener}"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
         <Button
             android:id="@+id/btnSaludar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/saludar"
-            app:enabled="@{saludo.dataValid}"/>
+            app:enabled="@{viewModel.formularioValido}"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
     </LinearLayout>
 
