--- a/PR172-BottomSheetPermanente/app/src/main/res/layout/bottom_sheet.xml
+++ b/PR172-BottomSheetPermanente/app/src/main/res/layout/bottom_sheet.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/rlPanel"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -43,8 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/lblTitulo"
-        android:layout_alignBottom="@+id/lblTitulo"
+        android:layout_alignTop="@+id/lblSubtitulo"
+        android:layout_alignBottom="@+id/lblSubtitulo"
         android:clickable="true"
         android:contentDescription="@string/abrir_detalle"
         android:src="@drawable/ic_arrow_drop_up"/>
