--- a/PR172-BottomSheetPermanente/app/src/main/res/values/dimens.xml
+++ b/PR172-BottomSheetPermanente/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 
     <dimen name="panel_padding">16dp</dimen>
     <dimen name="bottomSheet_peekHeight">80dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
