--- a/PR170-DataBindingBidireccional/app/src/main/res/layout/activity_main.xml
+++ b/PR170-DataBindingBidireccional/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="es.iessaladillo.pedrojoya.pr170.ActivityMainVM" />
+        <import type="es.iessaladillo.pedrojoya.pr170.MainViewModel" />
+        <import type="es.iessaladillo.pedrojoya.pr170.MainPresenter" />
         <variable
             name="viewModel"
-            type="ActivityMainVM" />
+            type="MainViewModel" />
+        <variable
+            name="presenter"
+            type="MainPresenter" />
     </data>
 
     <LinearLayout
@@ -22,7 +26,7 @@
             app:placeholder="@{@drawable/placeholder}"
             app:error="@{@drawable/placeholder}"
             android:scaleType="centerCrop"
-            android:onClick="@{viewModel::loadImage}"/>
+            android:onClick="@{presenter::loadImage}"/>
 
         <TextView
             android:id="@+id/lblNombre"
@@ -82,7 +86,7 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:enabled="@{viewModel.valido}"
-            android:onLongClick="@{viewModel::saludar}"/>
+            android:onLongClick="@{(v)->presenter.saludar(v, viewModel)}"/>
 
     </LinearLayout>
 
